<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutCreateOffer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    android:paddingTop="?attr/actionBarSize">

    <!-- Titel -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="Titel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editOfferTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Beschreibung -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editOfferDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="200"
            android:maxLines="5"
            android:minLines="3"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/category"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/buttonCreateOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_offer"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Abbrechen"
        android:layout_marginTop="8dp"/>

</LinearLayout>
